tooling/nargo_cli/tests/snapshots/execution_success/regression_6834/execute__tests__force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "year",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "min_age",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 8
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "integer",
        "sign": "unsigned",
        "width": 32
      },
      "visibility": "public"
    },
    "error_types": {
      "2920182694213909827": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/71WTU+EMBAttN0VDYkfFw8mHkyMB5MtHwJ64uD6P3AJv4OfLhM7YZhlVdx2J2naZV7fvD7aLoH4jnBogR0r8owHYmrbm+MicchlfOoMHOoMiM5wb0DE0/Fc/s32EcNAXjpcfMTquuSvTF5GYhqO9WcR4fTAnyK/8sNv1pbnvZ/yC1ZXMtzcHMRsCWZLMNBiMuY8mKP7EeefDe1SjOMrMc6B+GB1ICLG53hvFZ7ffXJzQD/EhfUhYWul+8T1xQJNWz5FalB96gTeG//nItdsvU+2Xw3tlq1x5en9o794RrXl5zUDkqf4e6L5jmn2cd9CxMw3Wgt0PLLn3DuuLWT4NeGSBzBzXjzYHs5MyfA4R4p5f3GP/XVtsdi/FzTBbdh8vdCD1UIPEP+80AP9gwdSzHuwYTi+zyDg7sL/ZdVP87V9bo6Isho/hGQ/eoH1aSiSp/jC/j4n+qkX9T91dmWTdFnTNS9N2+a75prxQ4TEJ9f106oqXtPP4cuo3XVtnv1W/wv4QCHDxQsAAA==",
  "debug_symbols": "nZLdqoQgEIDfZa69yL/aepWIsLJFEAu3Dhyidz9jVqe9WFi68VNnvhmFWaDTzfysjeuHFxTlAo031ppnbYdWTWZweLtAEhb6gIISoPkGJqBgCLmBUyg4gkXwCBGBKYKAwCISQSNYBI/AzHRdCRxd68lrHZpenoGPG5XXboLCzdYS+FF23pJeo3IbJ+UxmhDQrkNiwd5YHXYr+beTz6pku5uKU5Zf2zQRu04pu+Oz0+f3fH762Q0/S3f9cef3mTzs/M2u8KRa499Gag11vFGN1fuxn117iU6/4xE5RnL0Q6u72etQ6TKXuJYiJ1JUOJ04XqWURGbVGlr/AQ==",
  "file_map": {
    "50": {
      "source": "fn main(year: u32, min_age: u8) -> pub u32 {\n    if min_age == 0 {\n        (year - 2) / 4\n    } else if year > 1 {\n        (year - 2) / 4\n    } else {\n        0\n    }\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
